--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,9 +28,9 @@ body {
 
 .hero-gradient {
   background: linear-gradient(97.86deg,
-      #a509ff 0%,
-      #34acc7 53.65%,
-      #a134c7 100%);
+      #097cff 0%,
+      #bddc0e 53.65%,
+      #f7ff17 100%);
 }
 
 .gradient-02 {
